--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 a { text-decoration: none; background-color: #f6f6f6; color: #930; }
 a img { border: 0; }
 
-.item { font-size: 250%; font-weight: bold; }
+.item { font-size: 250%; font-weight: bold; background-color: #f6f6f6; border: 1px solid #eee; padding: 16px; }
 .result { color: white; padding: 8px 12px; }
 .correct { background-color: #060; }
 .incorrect { background-color: #900; }
