Valid XHTML strict in the application layout.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
 <title>Cheese or Font</title>
-
 <style type="text/css">
 #container { text-align: center; font-family: sans-serif; width: 50%; margin: auto; }
 #container form, #container form div { display: inline; }
@@ -15,7 +17,9 @@ a img { border: 0; }
 
 #other { color: #666; font-size: 80%; margin-top: 60px; }
 </style>
-
+<meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
+</head>
+<body>
 <div id="container">
 <%= yield %>
 </div>
@@ -29,3 +33,5 @@ try {
 var pageTracker = _gat._getTracker("UA-10607039-1");
 pageTracker._trackPageview();
 } catch(err) {}</script>
+</body>
+</html>
