--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,6 @@
 #container { text-align: center; font-family: sans-serif; width: 50%; margin: auto; }
 #container form, #container form div { display: inline; }
-a { text-decoration: none; background-color: #f6f6f6; color: #930; }
-a img { border: 0; padding: 0; margin: 0; }
+a img { border: 0; }
 
 .item { font-size: 250%; font-weight: bold; background-color: #f6f6f6; border: 1px solid #eee; padding: 16px; }
 .result { color: white; padding: 8px 12px; }
@@ -10,3 +9,5 @@ a img { border: 0; padding: 0; margin: 0; }
 .choice { vertical-align: middle; margin-right: 40px; }
 
 #other { color: #666; font-size: 80%; margin-top: 60px; }
+#other a { text-decoration: none; background-color: #f6f6f6; color: #930; }
+
