Link to the github repo.

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -4,4 +4,5 @@
 <div id="other">
 <p><a href="http://twitter.com/mogrify">@mogrify</a> made this. why?
 <a href="http://twitter.com/dickchiclets/statuses/3738658555">this</a>.</p>
+<p>this is on <a href="http://github.com/mogrify/cheese_or_font">github</a>.</p>
 </div>
