Add a stats page.

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -5,4 +5,5 @@
 <p><a href="http://twitter.com/mogrify">@mogrify</a> made this. why?
 <a href="http://twitter.com/dickchiclets/statuses/3738658555">this</a>.</p>
 <p>this is on <a href="http://github.com/mogrify/cheese_or_font">github</a>.</p>
+<p><%= link_to "stats", stats_path  %></p>
 </div>
