--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,3 +11,7 @@ a img { border: 0; }
 #other { color: #666; font-size: 80%; margin-top: 60px; }
 #other a { text-decoration: none; background-color: #f6f6f6; color: #930; }
 
+table.item_stats { font-size: 80%; text-align: left; margin: 8px auto; color: #333; }
+table.item_stats td { padding: 2px 8px 2px 12px; }
+table.item_stats th { padding: 2px 8px; }
+table.item_stats .title { font-size: 110%; padding-top: 12px; border-bottom: 1px solid #666; }
