--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -2,8 +2,8 @@
 <p><%= link_to image_tag("cheeseorfont.png", :alt=>"Cheese or Font"), play_path %></p>
 
 <div id="other">
-<p><a href="http://twitter.com/mogrify">@mogrify</a> made this. why?
-<a href="http://twitter.com/dickchiclets/statuses/3738658555">this</a>.</p>
-<p>this is on <a href="http://github.com/mogrify/cheese_or_font">github</a>.</p>
+<p><a href="http://twitter.com/mogrify">@mogrify</a> made this.</p>
+<p>The <a href="http://twitter.com/dickchiclets/statuses/3738658555">idea</a> came from <a href="http://twitter.com/dickchiclets">@dickchiclets</a>.</p>
+<p>follow <a href="http://twitter.com/cheeseorfont">@cheeseorfont</a> on twitter.</p>
 <p><%= link_to "stats", stats_path  %></p>
 </div>
