--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,17 @@
 <%= yield %>
 </div>
 
+<% if !hostname.include? "localhost" -%>
+<% profile_num = (hostname.include? "cheeseorfont.com") ? 2 : 1 -%>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
 <script type="text/javascript">
 try {
-var pageTracker = _gat._getTracker("UA-10607039-1");
+var pageTracker = _gat._getTracker("UA-10607039-<%= profile_num %>");
 pageTracker._trackPageview();
 } catch(err) {}</script>
 </body>
 </html>
+<% end -%>
