--- a/app/views/application/play.html.erb
+++ b/app/views/application/play.html.erb
@@ -10,6 +10,9 @@
 <div>
   <%= hidden_field_tag("id", @item.id, { :id => "cheese_id" }) %>
   <%= hidden_field_tag("guess", "cheese", { :id => "cheese_guess" }) %>
+  <% if @game -%>
+  <%= hidden_field_tag("game", @game.key, { :id => "cheese_game" }) %>
+  <% end -%>
   <%= image_submit_tag("cheese.png", :class => "choice", :value=>"Cheese", :title => "Cheese") %>
 </div>
 <% end -%>
@@ -17,10 +20,18 @@
 <div>
   <%= hidden_field_tag("id", @item.id, { :id => "font_id" }) %>
   <%= hidden_field_tag("guess", "font", { :id => "font_guess" }) %>
+  <% if @game -%>
+  <%= hidden_field_tag("game", @game.key, { :id => "font_game" }) %>
+  <% end -%>
   <%= image_submit_tag("font.png", :class => "choice", :value=>"Font", :title=>"Font") %>
 </div>
 <% end -%>
+
 <div id="other">
 <%= link_to "home", root_path %> | 
 <%= link_to "stats", stats_path %>
-</p>
+<% if @game -%>
+<p>The URL for this game is <%= link_to game_url, game_url %>.<br/>If you bookmark it,
+you can return to the game at any time.</p>
+<% end -%>
+</div>
