--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,8 @@ a img { border: 0; }
 .choice { vertical-align: middle; margin-right: 40px; }
 
 #other { color: #666; font-size: 80%; margin-top: 60px; }
-#other a { text-decoration: none; background-color: #f6f6f6; color: #930; }
+.other { color: #666; font-size: 80%; }
+#other a, .other a { text-decoration: none; background-color: #f6f6f6; color: #930; }
 
 table.item_stats { font-size: 80%; text-align: left; margin: 8px auto; color: #333; }
 table.item_stats td { padding: 2px 8px 2px 12px; }
