Only serve the Google Analytics code on the hosts that use it.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <%= yield %>
 </div>
 
-<% if !hostname.include? "localhost" -%>
+<% if hostname.include? "cheeseorfont.com" || hostname.include? "cheeseorfont.mogrify.org" -%>
 <% profile_num = (hostname.include? "cheeseorfont.com") ? 2 : 1 -%>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
