Clarification about sharing game URLs.

--- a/app/views/application/play.html.erb
+++ b/app/views/application/play.html.erb
@@ -32,6 +32,6 @@
 <%= link_to "stats", stats_path %>
 <% if @game -%>
 <p>The URL for this game is <%= link_to game_url, game_url %>.<br/>If you bookmark it,
-you can return to the game at any time.</p>
+you can return to the game at any time.<br/>Note: anyone who has the URL can play the game!</p>
 <% end -%>
 </div>
