Fix a typo on the home page.

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,7 +1,7 @@
 <p>It's time to play</p>
 <p><%= link_to image_tag("cheeseorfont.png", :alt=>"Cheese or Font"), play_path %></p>
 <p class="other">
-<%= link_to "Pratice Mode", play_path %><br/>
+<%= link_to "Practice Mode", play_path %><br/>
 In practice mode, you get a random name each time, and your choices are not tracked.<br/>You can keep going as long as you like.
 </p>
 <p class="other">
