--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -11,9 +11,8 @@ In game mode, your choices count toward your final score.<br/>When you've seen e
 
 
 <div id="other">
-<p><a href="http://twitter.com/mogrify">@mogrify</a> made this.</p>
+<p><a href="http://tonygambone.org">Tony Gambone</a> made this.</p>
 <p>The <a href="http://twitter.com/dickchiclets/statuses/3738658555">idea</a> came from <a href="http://twitter.com/dickchiclets">@dickchiclets</a>.</p>
 <p>Follow <a href="http://twitter.com/cheeseorfont">@cheeseorfont</a> on twitter.</p>
-<p>Also check out <a href="https://monotask.com/">Monotask</a>, from the makers of Cheese or Font and <a href="https://www.pearbudget.com/">PearBudget</a>.</p>
 <p><%= link_to "stats", stats_path  %></p>
 </div>
