--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,27 +1,28 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-<title>Cheese or Font</title>
-<%= stylesheet_link_tag("style") %>
-<meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
-</head>
-<body>
-<div id="container">
-<%= yield %>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Cheese or Font</title>
+    <%= csrf_meta_tags %>
 
-<% if hostname.include? "cheeseorfont" -%>
-<% profile_num = (hostname.include? "cheeseorfont.com") ? 2 : 1 -%>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-10607039-<%= profile_num %>");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-</body>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </head>
+
+  <body>
+    <div id="container">
+      <%= yield %>
+    </div>
+    <% if hostname.include? "cheeseorfont" -%>
+    <% profile_num = (hostname.include? "cheeseorfont.com") ? 2 : 1 -%>
+    <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+    try {
+    var pageTracker = _gat._getTracker("UA-10607039-<%= profile_num %>");
+    pageTracker._trackPageview();
+    } catch(err) {}</script>
+  </body>
 </html>
 <% end -%>
