--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,12 +1,8 @@
 <p>It's time to play</p>
 <p><%= link_to image_tag("cheeseorfont.png", :alt=>"Cheese or Font"), play_path %></p>
 <p class="other">
-<%= link_to "Practice Mode", play_path %><br/>
-In practice mode, you get a random name each time, and your choices are not tracked.<br/>You can keep going as long as you like.
-</p>
-<p class="other">
-<%= link_to "Game Mode", game_path(:key => nil) %><br/>
-In game mode, your choices count toward your final score.<br/>When you've seen every name, the game ends.<br/>
+<%= link_to "Play", play_path %><br/>
+You'll get a random name each time.<br/>You can keep going as long as you like.
 </p>
 
 
